# stage-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  shell.nix
src/: app.rs  clipboard.rs  conflict.rs  event.rs  keymap.rs  main.rs  syntax.rs  text_input.rs  theme.rs  ui.rs
src/git/: diff.rs  log.rs  mod.rs  operations.rs  status.rs  test_helpers.rs
src/ui/: diff_view.rs  file_panel.rs  overview_bar.rs  popup.rs  status_bar.rs
tests/: create_test_repo.sh
