[package]
name = "stage-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.19"
similar = { version = "2", features = ["text"] }
color-eyre = "0.6"
cli-clipboard = "0.4.0"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-onig"] }
